Fixed hdecay installation.

--- a/apps.json
+++ b/apps.json
@@ -59,13 +59,13 @@
             }
         }
     },
-    "Hdecay" {
+    "Hdecay": {
         "app_name": "Hdecay", 
         "dependencies": [], 
         "installer": "hdecay.sh",
         "versions": {
-            "current": {
-                "app_version": "current" 
+            "5.0": {
+                "app_version": "5.0" 
             }
         }
     }
