--- a/apps.json
+++ b/apps.json
@@ -59,6 +59,10 @@
         "installer": "feyntools.sh",
         "base_url": "http://www.feynarts.de/looptools/",
         "versions": {
+            "2.6.2": {
+                "base_url": "https://devel.ifca.es/~enol/feynapps/",
+                "app_version": "2.6.2"
+            }, 
             "2.7": {
                 "app_version": "2.7" 
             }, 
