New prospino app.

--- a/apps.json
+++ b/apps.json
@@ -1,4 +1,16 @@
 {
+    "Prospino": {
+        "app_name": "Prospino",
+        "dependencies": [],
+        "installer": "prospino.sh",
+        "base_url": "http://www.thphys.uni-heidelberg.de/~plehn/includes/prospino/",
+        "tar_file": "on_the_web_9_23_12.tar.gz",
+        "versions": {
+        "x": {
+            "app_version": "x"
+             }
+        }
+    },
     "FeynArts": {
         "app_name": "FeynArts", 
         "dependencies": [], 
