--- a/apps.json
+++ b/apps.json
@@ -62,6 +62,15 @@
             }, 
             "7.4": {
                 "app_version": "7.4"
+            },
+            "7.5": {
+                "app_version": "7.5"
+            },
+            "8.0": {
+                "app_version": "8.0"
+            },
+            "8.1": {
+                "app_version": "8.1"
             }
         }
     }, 
